add local llm server

--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,23 @@ LOG_LEVEL=
 # API Keys (replace with your actual keys)
 GOOGLE_SERVICE_ACCOUNT_B64=
 
-# LLM Provider
+# LLM Provider (Legacy - Optional)
+# These are no longer required if using local LLM server
 ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
 
 LITELLM_LOG=
+
+# Local LLM Server (Required for main script)
+# Model name to use in the LLM server (configured in docker-compose.yml)
+LLM_MODEL_NAME=Qwen/Qwen2.5-0.5B
+# Authentication credentials for the LLM server
+LLM_USERNAME=admin
+LLM_PASSWORD=password
+# URL of the LLM server (use http://llm-server:8000 when running in Docker)
+LLM_SERVER_URL=http://llm-server:8000
+# Log level for LLM server (DEBUG, INFO, WARNING, ERROR)
+LLM_LOG_LEVEL=INFO
 
 # Google Docs
 PHONE_DIRECTORY_DOC_ID=
